[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[node name="CanvasLayerHUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StartButton" type="Button" parent="."]
anchor_right = 0.076
margin_left = 120.0
margin_top = 448.0
margin_right = 300.0
margin_bottom = 532.0
custom_fonts/font = SubResource( 1 )
action_mode = 0
text = "Start"

[node name="ScoreLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 176.0
margin_top = -352.0
margin_right = 272.0
margin_bottom = -328.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="Message" type="Label" parent="."]
margin_left = 56.0
margin_top = 224.0
margin_right = 413.0
margin_bottom = 302.0
custom_fonts/font = SubResource( 3 )
text = "Elude ME!!"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.03

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
